--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,9 @@
   <head>
     <title>app</title>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="vendor.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    <link rel="stylesheet" href="main.css" />
-
+    <script type="text/javascript" src="bundle.js"></script>
   </head>
-
   <body>
-  <h1>App Skeleton</h1>
+    <h1>Now Loading...</h1>
   </body>
 </html>
