--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Test</h1>
+    <button onClick='start()'>start worker</button>
     <button onClick='sendGetId()'>get</button>
     <button onClick='sendPost()'>post</button>
   </body>
